syntax = "proto3";

message Empty {}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

message NewsList {
    repeated News news = 1;
}

message NewsId {
    string id = 1;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc CreateNews (News) returns (News) {}
    rpc GetNewsById (NewsId) returns (News) {}
    rpc DeleteNewsById (NewsId) returns (News) {}
}